--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
 
 @import "tailwindcss";
 
@@ -7,13 +7,6 @@
   backface-visibility: hidden;
   transform-style: preserve-3d;
   transform: translateZ(0); /* forces GPU compositing */
-}
-
-
-
-
-*{
-  font-family: 'Poppins', sans-serif;
 }
 
 html{
@@ -36,18 +29,18 @@ button, a, input, textarea, select {
 
 /* global scrollbar style*/ 
 /* WebKit Browsers (Chrome, Edge, Safari) */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
-}
+} */
 
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background: #0f0b1e;
   border-radius: 12px;
-}
+} */
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(180deg, #7c3aed 0%, #9333ea 100%);
+  background-color: linear-gradient(180deg, #7c3aed 0%, #9333ea 100%);
   border-radius: 12px;
   border: 2px solid transparent;
   background-clip: padding-box;
@@ -60,7 +53,7 @@ button, a, input, textarea, select {
 /* Firefox Global Support */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #9333ea #0f0b1e;
+  scrollbar-color: #4aeb00 #0f0b1e;
 }
 
 
